# client-android

./: .gitignore  README.md  build-ffmpeg-example.sh
app/: build.gradle  build_rust.gradle
app/src/androidTest/java/com/streamaudio/client/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/willir/audiosharing/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/streamaudio/client/: MainActivity.kt  RustCb.kt  RustWrapper.kt
app/src/main/java/com/streamaudio/client/service/: PlayService.kt  StreamAudioApplication.kt
app/src/main/java/com/willir/audiosharing/: MainActivity.kt  RustWrapper.kt
app/src/main/res/drawable/: ic_delay_decrease_24dp.xml  ic_delay_increase_24dp.xml  ic_delay_locked.xml  ic_delay_unlocked.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/rust/: Cargo.toml  build.rs
app/src/main/rust/.cargo/: config
app/src/main/rust/src/: android_helper.rs  error.rs  jni_ffi_callbacks.rs  lib.rs  macros.rs  player.rs
app/src/main/rust/src/android_audio/: audio_ffi.rs  audio_ffi_defines.rs  mod.rs
app/src/main/rust/src/jni_ffi/: from_java.rs  macros.rs  mod.rs  to_java.rs
app/src/main/rust/src/net_client/: mod.rs  pkt_decoder.rs
app/src/main/rust/src/player/: mod.rs  output_buffer.rs
app/src/main/rust/src/util/: interval_measure.rs  mod.rs  window_avg_calc.rs
app/src/test/java/com/streamaudio/client/: ExampleUnitTest.kt
app/src/test/java/com/willir/audiosharing/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
